[package]
name = "femtoclaw-remote"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "FemtoClaw Remote Protocol — API server, event handlers, and WebSocket support"
repository = "https://github.com/femtoclaw/femtoclaw-remote.git"

[dependencies]
femtoclaw = { path = "../femtoclaw" }
femtoclaw-protocol = { path = "../femtoclaw-protocol" }
femtoclaw-policy = { path = "../femtoclaw-policy" }
femtoclaw-audit = { path = "../femtoclaw-audit" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
